# checker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
core/: admin.py  models.py  services.py  tasks.py  views.py
core/fixtures/: urls.py
core/migrations/: 0001_initial.py  0002_auto_20220215_2354.py
core/templates/: analytics.html
