[tool.poetry]
name = "checker"
version = "0.1.0"
description = ""
authors = ["Dmytro Parfeniuk <parfeniukink@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
celery = "5.2.3"
django-celery-beat = "2.2.1"
psycopg2-binary = "==2.9.3"
httpx = "0.22.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
